removed extra code and fixed circle role icon spacing

--- a/client/src/styles/coup/CoupContainer.css
+++ b/client/src/styles/coup/CoupContainer.css
@@ -180,7 +180,7 @@
 
 .circlegraph
 {
-  width: 65%;
+  width: 55%;
   height: 70%;
   position: relative;
   margin: calc(50px / 2 + 0px);
